--- a/styles/globals.css
+++ b/styles/globals.css
@@ -199,9 +199,9 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 
-  --font-sans: var(--font-sans);
-  --font-mono: var(--font-mono);
-  --font-serif: var(--font-serif);
+  --font-sans: var(--font-fk-grotesk-neue);
+  --font-mono: var(--font-berkeley-mono);
+  --font-serif: var(--font-pp-editorial-new);
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
